Renk örgüsü mobil düzeltildi.

--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -63,91 +63,91 @@
     <div data-gnl="4">
       <h1>Renk Tablosu Örneği</h1>
     </div>
-    <div data-gnl="1" data-arka="ana">data-arka="ana"</div>
-    <div data-gnl="1" data-arka="ara">data-arka="ara"</div>
-    <div data-gnl="1" data-arka="birincil">data-arka="birincil"</div>
-    <div data-gnl="1" data-arka="ikincil">data-arka="ikincil"</div>
-    <div data-gnl="1" data-arka="ana 100">data-arka="ana 100"</div>
-    <div data-gnl="1" data-arka="ara 100">data-arka="ara 100"</div>
-    <div data-gnl="1" data-arka="birincil 100">data-arka="birincil 100"</div>
-    <div data-gnl="1" data-arka="ikincil 100">data-arka="ikincil 100"</div>
-    <div data-gnl="1" data-arka="ana 200">data-arka="ana 200"</div>
-    <div data-gnl="1" data-arka="ara 200">data-arka="ara 200"</div>
-    <div data-gnl="1" data-arka="birincil 200">data-arka="birincil 200"</div>
-    <div data-gnl="1" data-arka="ikincil 200">data-arka="ikincil 200"</div>
-    <div data-gnl="1" data-arka="ana 300">data-arka="ana 300"</div>
-    <div data-gnl="1" data-arka="ara 300">data-arka="ara 300"</div>
-    <div data-gnl="1" data-arka="birincil 300">data-arka="birincil 300"</div>
-    <div data-gnl="1" data-arka="ikincil 300">data-arka="ikincil 300"</div>
-    <div data-gnl="1" data-arka="ana 400">data-arka="ana 400"</div>
-    <div data-gnl="1" data-arka="ara 400">data-arka="ara 400"</div>
-    <div data-gnl="1" data-arka="birincil 400">data-arka="birincil 400"</div>
-    <div data-gnl="1" data-arka="ikincil 400">data-arka="ikincil 400"</div>
-    <div data-gnl="1" data-arka="ana 500">data-arka="ana 500"</div>
-    <div data-gnl="1" data-arka="ara 500">data-arka="ara 500"</div>
-    <div data-gnl="1" data-arka="birincil 500">data-arka="birincil 500"</div>
-    <div data-gnl="1" data-arka="ikincil 500">data-arka="ikincil 500"</div>
-    <div data-gnl="1" data-arka="ana 600">data-arka="ana 600"</div>
-    <div data-gnl="1" data-arka="ara 600">data-arka="ara 600"</div>
-    <div data-gnl="1" data-arka="birincil 600">data-arka="birincil 600"</div>
-    <div data-gnl="1" data-arka="ikincil 600">data-arka="ikincil 600"</div>
-    <div data-gnl="1" data-arka="ana 700">data-arka="ana 700"</div>
-    <div data-gnl="1" data-arka="ara 700">data-arka="ara 700"</div>
-    <div data-gnl="1" data-arka="birincil 700">data-arka="birincil 700"</div>
-    <div data-gnl="1" data-arka="ikincil 700">data-arka="ikincil 700"</div>
-    <div data-gnl="1" data-arka="ana 800">data-arka="ana 800"</div>
-    <div data-gnl="1" data-arka="ara 800">data-arka="ara 800"</div>
-    <div data-gnl="1" data-arka="birincil 800">data-arka="birincil 800"</div>
-    <div data-gnl="1" data-arka="ikincil 800">data-arka="ikincil 800"</div>
-    <div data-gnl="1" data-arka="ana 900">data-arka="ana 900"</div>
-    <div data-gnl="1" data-arka="ara 900">data-arka="ara 900"</div>
-    <div data-gnl="1" data-arka="birincil 900">data-arka="birincil 900"</div>
-    <div data-gnl="1" data-arka="ikincil 900">data-arka="ikincil 900"</div>
-    <div data-gnl="1" data-arka="ana en-soluk">data-arka="ana en-soluk"</div>
-    <div data-gnl="1" data-arka="ara en-soluk">data-arka="ara en-soluk"</div>
-    <div data-gnl="1" data-arka="birincil en-soluk">data-arka="birincil en-soluk"</div>
-    <div data-gnl="1" data-arka="ikincil en-soluk">data-arka="ikincil en-soluk"</div>
-    <div data-gnl="1" data-arka="ana çok-soluk">data-arka="ana çok-soluk"</div>
-    <div data-gnl="1" data-arka="ara çok-soluk">data-arka="ara çok-soluk"</div>
-    <div data-gnl="1" data-arka="birincil çok-soluk">data-arka="birincil çok-soluk"</div>
-    <div data-gnl="1" data-arka="ikincil çok-soluk">data-arka="ikincil çok-soluk"</div>
-    <div data-gnl="1" data-arka="ana soluk">data-arka="ana soluk"</div>
-    <div data-gnl="1" data-arka="ara soluk">data-arka="ara soluk"</div>
-    <div data-gnl="1" data-arka="birincil soluk">data-arka="birincil soluk"</div>
-    <div data-gnl="1" data-arka="ikincil soluk">data-arka="ikincil soluk"</div>
-    <div data-gnl="1" data-arka="ana az-soluk">data-arka="ana az-soluk"</div>
-    <div data-gnl="1" data-arka="ara az-soluk">data-arka="ara az-soluk"</div>
-    <div data-gnl="1" data-arka="birincil az-soluk">data-arka="birincil az-soluk"</div>
-    <div data-gnl="1" data-arka="ikincil az-soluk">data-arka="ikincil az-soluk"</div>
-    <div data-gnl="1" data-arka="ana normal">data-arka="ana normal"</div>
-    <div data-gnl="1" data-arka="ara normal">data-arka="ara normal"</div>
-    <div data-gnl="1" data-arka="birincil normal">data-arka="birincil normal"</div>
-    <div data-gnl="1" data-arka="ikincil normal">data-arka="ikincil normal"</div>
-    <div data-gnl="1" data-arka="ana az-parlak">data-arka="ana az-parlak"</div>
-    <div data-gnl="1" data-arka="ara az-parlak">data-arka="ara az-parlak"</div>
-    <div data-gnl="1" data-arka="birincil az-parlak">data-arka="birincil az-parlak"</div>
-    <div data-gnl="1" data-arka="ikincil az-parlak">data-arka="ikincil az-parlak"</div>
-    <div data-gnl="1" data-arka="ana parlak">data-arka="ana parlak"</div>
-    <div data-gnl="1" data-arka="ara parlak">data-arka="ara parlak"</div>
-    <div data-gnl="1" data-arka="birincil parlak">data-arka="birincil parlak"</div>
-    <div data-gnl="1" data-arka="ikincil parlak">data-arka="ikincil parlak"</div>
-    <div data-gnl="1" data-arka="ana çok-parlak">data-arka="ana çok-parlak"</div>
-    <div data-gnl="1" data-arka="ara çok-parlak">data-arka="ara çok-parlak"</div>
-    <div data-gnl="1" data-arka="birincil çok-parlak">data-arka="birincil çok-parlak"</div>
-    <div data-gnl="1" data-arka="ikincil çok-parlak">data-arka="ikincil çok-parlak"</div>
-    <div data-gnl="1" data-arka="ana en-parlak">data-arka="ana en-parlak"</div>
-    <div data-gnl="1" data-arka="ara en-parlak">data-arka="ara en-parlak"</div>
-    <div data-gnl="1" data-arka="birincil en-parlak">data-arka="birincil en-parlak"</div>
-    <div data-gnl="1" data-arka="ikincil en-parlak">data-arka="ikincil en-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana">data-arka="ana"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara">data-arka="ara"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil">data-arka="birincil"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil">data-arka="ikincil"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana 100">data-arka="ana 100"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara 100">data-arka="ara 100"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil 100">data-arka="birincil 100"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil 100">data-arka="ikincil 100"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana 200">data-arka="ana 200"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara 200">data-arka="ara 200"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil 200">data-arka="birincil 200"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil 200">data-arka="ikincil 200"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana 300">data-arka="ana 300"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara 300">data-arka="ara 300"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil 300">data-arka="birincil 300"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil 300">data-arka="ikincil 300"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana 400">data-arka="ana 400"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara 400">data-arka="ara 400"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil 400">data-arka="birincil 400"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil 400">data-arka="ikincil 400"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana 500">data-arka="ana 500"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara 500">data-arka="ara 500"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil 500">data-arka="birincil 500"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil 500">data-arka="ikincil 500"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana 600">data-arka="ana 600"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara 600">data-arka="ara 600"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil 600">data-arka="birincil 600"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil 600">data-arka="ikincil 600"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana 700">data-arka="ana 700"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara 700">data-arka="ara 700"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil 700">data-arka="birincil 700"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil 700">data-arka="ikincil 700"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana 800">data-arka="ana 800"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara 800">data-arka="ara 800"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil 800">data-arka="birincil 800"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil 800">data-arka="ikincil 800"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana 900">data-arka="ana 900"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara 900">data-arka="ara 900"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil 900">data-arka="birincil 900"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil 900">data-arka="ikincil 900"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana en-soluk">data-arka="ana en-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara en-soluk">data-arka="ara en-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil en-soluk">data-arka="birincil en-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil en-soluk">data-arka="ikincil en-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana çok-soluk">data-arka="ana çok-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara çok-soluk">data-arka="ara çok-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil çok-soluk">data-arka="birincil çok-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil çok-soluk">data-arka="ikincil çok-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana soluk">data-arka="ana soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara soluk">data-arka="ara soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil soluk">data-arka="birincil soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil soluk">data-arka="ikincil soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana az-soluk">data-arka="ana az-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara az-soluk">data-arka="ara az-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil az-soluk">data-arka="birincil az-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil az-soluk">data-arka="ikincil az-soluk"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana normal">data-arka="ana normal"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara normal">data-arka="ara normal"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil normal">data-arka="birincil normal"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil normal">data-arka="ikincil normal"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana az-parlak">data-arka="ana az-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara az-parlak">data-arka="ara az-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil az-parlak">data-arka="birincil az-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil az-parlak">data-arka="ikincil az-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana parlak">data-arka="ana parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara parlak">data-arka="ara parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil parlak">data-arka="birincil parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil parlak">data-arka="ikincil parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana çok-parlak">data-arka="ana çok-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara çok-parlak">data-arka="ara çok-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil çok-parlak">data-arka="birincil çok-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil çok-parlak">data-arka="ikincil çok-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ana en-parlak">data-arka="ana en-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ara en-parlak">data-arka="ara en-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="birincil en-parlak">data-arka="birincil en-parlak"</div>
+    <div data-gnl="2" data-ort="1" data-arka="ikincil en-parlak">data-arka="ikincil en-parlak"</div>
   </div>
   <div data-gnl="24">
     <h2>Örnek</h2>
   </div>
   <div data-gnl="1 2p">
-    <iframe data-gnl="2" height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/html/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
+    <iframe data-gnl="1" height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/html/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
   </div>
   <div data-gnl="1 2p">
-    <iframe data-gnl="2" height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/result/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
+    <iframe data-gnl="1"height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/result/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
   </div>
 </div>
 
