renk örgüsü düzeltme

--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -59,7 +59,7 @@
       <b>Renk Aydınlığı:</b><br>en-soluk -  çok-soluk - soluk - az-soluk - normal - az-parlak - parlak - çok-parlak - en-parlak<br>
     <b>Kullanım tipi:</b><br>data-metin="birincil 300 soluk" data-arka="ikincil 600 parlak" data-kenar="tam siyah 800"</p>
   </div>
-  <div class="" data-gnl="4 4p">
+  <div class="" data-gnl="4 4p" data-ort="4 4p">
     <div data-gnl="4">
       <h1>Renk Tablosu Örneği</h1>
     </div>
@@ -144,10 +144,10 @@
     <h2>Örnek</h2>
   </div>
   <div data-gnl="1 2p">
-    <iframe data-gnl="1" height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/html/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
+    <iframe data-gnl="2" height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/html/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
   </div>
   <div data-gnl="1 2p">
-    <iframe data-gnl="1"height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/result/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
+    <iframe data-gnl="2"height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/result/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
   </div>
 </div>
 
