--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -72,7 +72,7 @@
       <div data-gnl="1 1p" data-arka="ana 500">data-arka="ana 500"</div>
       <div data-gnl="1 1p" data-arka="ana 600">data-arka="ana 600"</div>
       <div data-gnl="1 1p" data-arka="ana 700">data-arka="ana 700"</div>
-      <div data-gnl="1 1p" data-arka="ara 700">data-arka="ara 700"</div>
+      <div data-gnl="1 1p" data-arka="ana 700">data-arka="ana 700"</div>
       <div data-gnl="1 1p" data-arka="ana 800">data-arka="ana 800"</div>
       <div data-gnl="1 1p" data-arka="ana 900">data-arka="ana 900"</div>
       <div data-gnl="1 1p" data-arka="ana en-soluk">data-arka="ana en-soluk"</div>
