--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -116,7 +116,7 @@
       <div data-gnl="1 1p" data-arka="birincil 500">data-arka="birincil 500"</div>
       <div data-gnl="1 1p" data-arka="birincil 600">data-arka="birincil 600"</div>
       <div data-gnl="1 1p" data-arka="birincil 700">data-arka="birincil 700"</div>
-      <div data-gnl="1 1p" data-arka="ara 700">data-arka="ara 700"</div>
+      <div data-gnl="1 1p" data-arka="birincil 700">data-arka="birincil 700"</div>
       <div data-gnl="1 1p" data-arka="birincil 800">data-arka="birincil 800"</div>
       <div data-gnl="1 1p" data-arka="birincil 900">data-arka="birincil 900"</div>
       <div data-gnl="1 1p" data-arka="birincil en-soluk">data-arka="birincil en-soluk"</div>
@@ -138,7 +138,7 @@
       <div data-gnl="1 1p" data-arka="ikincil 500">data-arka="ikincil 500"</div>
       <div data-gnl="1 1p" data-arka="ikincil 600">data-arka="ikincil 600"</div>
       <div data-gnl="1 1p" data-arka="ikincil 700">data-arka="ikincil 700"</div>
-      <div data-gnl="1 1p" data-arka="ara 700">data-arka="ara 700"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 700">data-arka="ikincil 700"</div>
       <div data-gnl="1 1p" data-arka="ikincil 800">data-arka="ikincil 800"</div>
       <div data-gnl="1 1p" data-arka="ikincil 900">data-arka="ikincil 900"</div>
       <div data-gnl="1 1p" data-arka="ikincil en-soluk">data-arka="ikincil en-soluk"</div>
