--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -65,87 +65,87 @@
     </div>
     <div data-gnl="2" data-ort="1">
       <div data-gnl="1 1p" data-arka="ana">data-arka="ana"</div>
-      <div data-gnl="1 1p" data-arka="ana 100">"ana 100"</div>
-      <div data-gnl="1 1p" data-arka="ana 200">"ana 200"</div>
-      <div data-gnl="1 1p" data-arka="ana 300">"ana 300"</div>
-      <div data-gnl="1 1p" data-arka="ana 400">"ana 400"</div>
-      <div data-gnl="1 1p" data-arka="ana 500">"ana 500"</div>
-      <div data-gnl="1 1p" data-arka="ana 600">"ana 600"</div>
-      <div data-gnl="1 1p" data-arka="ana 700">"ana 700"</div>
-      <div data-gnl="1 1p" data-arka="ana 800">"ana 800"</div>
-      <div data-gnl="1 1p" data-arka="ana 900">"ana 900"</div>
-      <div data-gnl="1 1p" data-arka="ana en-soluk">"ana en-soluk"</div>
-      <div data-gnl="1 1p" data-arka="ana çok-soluk">"ana çok-soluk"</div>
-      <div data-gnl="1 1p" data-arka="ana soluk">"ana soluk"</div>
-      <div data-gnl="1 1p" data-arka="ana az-soluk">"ana az-soluk"</div>
-      <div data-gnl="1 1p" data-arka="ana normal">"ana normal"</div>
-      <div data-gnl="1 1p" data-arka="ana az-parlak">"ana az-parlak"</div>
-      <div data-gnl="1 1p" data-arka="ana parlak">"ana parlak"</div>
-      <div data-gnl="1 1p" data-arka="ana çok-parlak">"ana çok-parlak"</div>
-      <div data-gnl="1 1p" data-arka="ana en-parlak">"ana en-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ana 100">data-arka="ana 100"</div>
+      <div data-gnl="1 1p" data-arka="ana 200">data-arka="ana 200"</div>
+      <div data-gnl="1 1p" data-arka="ana 300">data-arka="ana 300"</div>
+      <div data-gnl="1 1p" data-arka="ana 400">data-arka="ana 400"</div>
+      <div data-gnl="1 1p" data-arka="ana 500">data-arka="ana 500"</div>
+      <div data-gnl="1 1p" data-arka="ana 600">data-arka="ana 600"</div>
+      <div data-gnl="1 1p" data-arka="ana 700">data-arka="ana 700"</div>
+      <div data-gnl="1 1p" data-arka="ana 800">data-arka="ana 800"</div>
+      <div data-gnl="1 1p" data-arka="ana 900">data-arka="ana 900"</div>
+      <div data-gnl="1 1p" data-arka="ana en-soluk">data-arka="ana en-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ana çok-soluk">data-arka="ana çok-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ana soluk">data-arka="ana soluk"</div>
+      <div data-gnl="1 1p" data-arka="ana az-soluk">data-arka="ana az-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ana normal">data-arka="ana normal"</div>
+      <div data-gnl="1 1p" data-arka="ana az-parlak">data-arka="ana az-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ana parlak">data-arka="ana parlak"</div>
+      <div data-gnl="1 1p" data-arka="ana çok-parlak">data-arka="ana çok-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ana en-parlak">data-arka="ana en-parlak"</div>
     </div>
     <div data-gnl="2" data-ort="1">
       <div data-gnl="1 1p" data-arka="ara">data-arka="ara"</div>
-      <div data-gnl="1 1p" data-arka="ara 100">"ara 100"</div>
-      <div data-gnl="1 1p" data-arka="ara 200">"ara 200"</div>
-      <div data-gnl="1 1p" data-arka="ara 300">"ara 300"</div>
-      <div data-gnl="1 1p" data-arka="ara 400">"ara 400"</div>
-      <div data-gnl="1 1p" data-arka="ara 500">"ara 500"</div>
-      <div data-gnl="1 1p" data-arka="ara 600">"ara 600"</div>
-      <div data-gnl="1 1p" data-arka="ara 700">"ara 700"</div>
-      <div data-gnl="1 1p" data-arka="ara 800">"ara 800"</div>
-      <div data-gnl="1 1p" data-arka="ara 900">"ara 900"</div>
-      <div data-gnl="1 1p" data-arka="ara en-soluk">"ara en-soluk"</div>
-      <div data-gnl="1 1p" data-arka="ara çok-soluk">"ara çok-soluk"</div>
-      <div data-gnl="1 1p" data-arka="ara soluk">"ara soluk"</div>
-      <div data-gnl="1 1p" data-arka="ara az-soluk">"ara az-soluk"</div>
-      <div data-gnl="1 1p" data-arka="ara normal">"ara normal"</div>
-      <div data-gnl="1 1p" data-arka="ara az-parlak">"ara az-parlak"</div>
-      <div data-gnl="1 1p" data-arka="ara parlak">"ara parlak"</div>
-      <div data-gnl="1 1p" data-arka="ara çok-parlak">"ara çok-parlak"</div>
-      <div data-gnl="1 1p" data-arka="ara en-parlak">"ara en-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ara 100">data-arka="ara 100"</div>
+      <div data-gnl="1 1p" data-arka="ara 200">data-arka="ara 200"</div>
+      <div data-gnl="1 1p" data-arka="ara 300">data-arka="ara 300"</div>
+      <div data-gnl="1 1p" data-arka="ara 400">data-arka="ara 400"</div>
+      <div data-gnl="1 1p" data-arka="ara 500">data-arka="ara 500"</div>
+      <div data-gnl="1 1p" data-arka="ara 600">data-arka="ara 600"</div>
+      <div data-gnl="1 1p" data-arka="ara 700">data-arka="ara 700"</div>
+      <div data-gnl="1 1p" data-arka="ara 800">data-arka="ara 800"</div>
+      <div data-gnl="1 1p" data-arka="ara 900">data-arka="ara 900"</div>
+      <div data-gnl="1 1p" data-arka="ara en-soluk">data-arka="ara en-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ara çok-soluk">data-arka="ara çok-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ara soluk">data-arka="ara soluk"</div>
+      <div data-gnl="1 1p" data-arka="ara az-soluk">data-arka="ara az-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ara normal">data-arka="ara normal"</div>
+      <div data-gnl="1 1p" data-arka="ara az-parlak">data-arka="ara az-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ara parlak">data-arka="ara parlak"</div>
+      <div data-gnl="1 1p" data-arka="ara çok-parlak">data-arka="ara çok-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ara en-parlak">data-arka="ara en-parlak"</div>
     </div>
     <div data-gnl="2" data-ort="1">
       <div data-gnl="1 1p" data-arka="birincil">data-arka="birincil"</div>
-      <div data-gnl="1 1p" data-arka="birincil 100">"birincil 100"</div>
-      <div data-gnl="1 1p" data-arka="birincil 200">"birincil 200"</div>
-      <div data-gnl="1 1p" data-arka="birincil 300">"birincil 300"</div>
-      <div data-gnl="1 1p" data-arka="birincil 400">"birincil 400"</div>
-      <div data-gnl="1 1p" data-arka="birincil 500">"birincil 500"</div>
-      <div data-gnl="1 1p" data-arka="birincil 600">"birincil 600"</div>
-      <div data-gnl="1 1p" data-arka="birincil 700">"birincil 700"</div>
-      <div data-gnl="1 1p" data-arka="birincil 800">"birincil 800"</div>
-      <div data-gnl="1 1p" data-arka="birincil 900">"birincil 900"</div>
-      <div data-gnl="1 1p" data-arka="birincil en-soluk">"birincil en-soluk"</div>
-      <div data-gnl="1 1p" data-arka="birincil çok-soluk">"birincil çok-soluk"</div>
-      <div data-gnl="1 1p" data-arka="birincil soluk">"birincil soluk"</div>
-      <div data-gnl="1 1p" data-arka="birincil az-soluk">"birincil az-soluk"</div>
-      <div data-gnl="1 1p" data-arka="birincil normal">"birincil normal"</div>
-      <div data-gnl="1 1p" data-arka="birincil az-parlak">"birincil az-parlak"</div>
-      <div data-gnl="1 1p" data-arka="birincil parlak">"birincil parlak"</div>
-      <div data-gnl="1 1p" data-arka="birincil çok-parlak">"birincil çok-parlak"</div>
-      <div data-gnl="1 1p" data-arka="birincil en-parlak">"birincil en-parlak"</div>
+      <div data-gnl="1 1p" data-arka="birincil 100">data-arka="birincil 100"</div>
+      <div data-gnl="1 1p" data-arka="birincil 200">data-arka="birincil 200"</div>
+      <div data-gnl="1 1p" data-arka="birincil 300">data-arka="birincil 300"</div>
+      <div data-gnl="1 1p" data-arka="birincil 400">data-arka="birincil 400"</div>
+      <div data-gnl="1 1p" data-arka="birincil 500">data-arka="birincil 500"</div>
+      <div data-gnl="1 1p" data-arka="birincil 600">data-arka="birincil 600"</div>
+      <div data-gnl="1 1p" data-arka="birincil 700">data-arka="birincil 700"</div>
+      <div data-gnl="1 1p" data-arka="birincil 800">data-arka="birincil 800"</div>
+      <div data-gnl="1 1p" data-arka="birincil 900">data-arka="birincil 900"</div>
+      <div data-gnl="1 1p" data-arka="birincil en-soluk">data-arka="birincil en-soluk"</div>
+      <div data-gnl="1 1p" data-arka="birincil çok-soluk">data-arka="birincil çok-soluk"</div>
+      <div data-gnl="1 1p" data-arka="birincil soluk">data-arka="birincil soluk"</div>
+      <div data-gnl="1 1p" data-arka="birincil az-soluk">data-arka="birincil az-soluk"</div>
+      <div data-gnl="1 1p" data-arka="birincil normal">data-arka="birincil normal"</div>
+      <div data-gnl="1 1p" data-arka="birincil az-parlak">data-arka="birincil az-parlak"</div>
+      <div data-gnl="1 1p" data-arka="birincil parlak">data-arka="birincil parlak"</div>
+      <div data-gnl="1 1p" data-arka="birincil çok-parlak">data-arka="birincil çok-parlak"</div>
+      <div data-gnl="1 1p" data-arka="birincil en-parlak">data-arka="birincil en-parlak"</div>
     </div>
     <div data-gnl="2" data-ort="1">
       <div data-gnl="1 1p" data-arka="ikincil">data-arka="ikincil"</div>
-      <div data-gnl="1 1p" data-arka="ikincil 100">"ikincil 100"</div>
-      <div data-gnl="1 1p" data-arka="ikincil 200">"ikincil 200"</div>
-      <div data-gnl="1 1p" data-arka="ikincil 300">"ikincil 300"</div>
-      <div data-gnl="1 1p" data-arka="ikincil 400">"ikincil 400"</div>
-      <div data-gnl="1 1p" data-arka="ikincil 500">"ikincil 500"</div>
-      <div data-gnl="1 1p" data-arka="ikincil 600">"ikincil 600"</div>
-      <div data-gnl="1 1p" data-arka="ikincil 700">"ikincil 700"</div>
-      <div data-gnl="1 1p" data-arka="ikincil 800">"ikincil 800"</div>
-      <div data-gnl="1 1p" data-arka="ikincil 900">"ikincil 900"</div>
-      <div data-gnl="1 1p" data-arka="ikincil en-soluk">"ikincil en-soluk"</div>
-      <div data-gnl="1 1p" data-arka="ikincil çok-soluk">"ikincil çok-soluk"</div>
-      <div data-gnl="1 1p" data-arka="ikincil soluk">"ikincil soluk"</div>
-      <div data-gnl="1 1p" data-arka="ikincil az-soluk">"ikincil az-soluk"</div>
-      <div data-gnl="1 1p" data-arka="ikincil normal">"ikincil normal"</div>
-      <div data-gnl="1 1p" data-arka="ikincil az-parlak">"ikincil az-parlak"</div>
-      <div data-gnl="1 1p" data-arka="ikincil parlak">"ikincil parlak"</div>
-      <div data-gnl="1 1p" data-arka="ikincil çok-parlak">"ikincil çok-parlak"</div>
-      <div data-gnl="1 1p" data-arka="ikincil en-parlak">"ikincil en-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 100">data-arka="ikincil 100"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 200">data-arka="ikincil 200"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 300">data-arka="ikincil 300"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 400">data-arka="ikincil 400"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 500">data-arka="ikincil 500"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 600">data-arka="ikincil 600"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 700">data-arka="ikincil 700"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 800">data-arka="ikincil 800"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 900">data-arka="ikincil 900"</div>
+      <div data-gnl="1 1p" data-arka="ikincil en-soluk">data-arka="ikincil en-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ikincil çok-soluk">data-arka="ikincil çok-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ikincil soluk">data-arka="ikincil soluk"</div>
+      <div data-gnl="1 1p" data-arka="ikincil az-soluk">data-arka="ikincil az-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ikincil normal">data-arka="ikincil normal"</div>
+      <div data-gnl="1 1p" data-arka="ikincil az-parlak">data-arka="ikincil az-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ikincil parlak">data-arka="ikincil parlak"</div>
+      <div data-gnl="1 1p" data-arka="ikincil çok-parlak">data-arka="ikincil çok-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ikincil en-parlak">data-arka="ikincil en-parlak"</div>
     </div>
   </div>
   <div data-gnl="24">
