--- a/belgeler/kap-olcekleri/3p.html
+++ b/belgeler/kap-olcekleri/3p.html
@@ -24,45 +24,45 @@
   <![endif]-->
 </head>
 <body>
-<div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+<div class="header" data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
-<div class="kap ortala" data-gnl="24p">
-  <div data-gnl="23 24p">
-    <div data-gnl="24">
+<div class="kap ortala" data-deveb~="24p">
+  <div data-deveb~="23 24p">
+    <div data-deveb~="24">
       <h1>Kap Ölçekleri: 3p</h1>
       <p class="beri-alt-2">Uyumluluk özelliği nedeniyle gnl, byk, ort, kçk, ufk ekran ölçekleriyle birlikte kullanılır.</p>
     </div>
 
-    <div data-gnl="3 3p">
+    <div data-deveb~="3 3p">
 
-      <div class="kutu kutu-genel">data-gnl="3 3p"</div>
+      <div class="kutu kutu-genel">data-deveb~="3 3p"</div>
 
-      <div data-gnl="3"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="3"</div></div>
+      <div data-deveb~="3"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="3"</div></div>
 
-      <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="2"</div></div>
-      <div data-gnl="1"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="1"</div></div>
+      <div data-deveb~="2"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="2"</div></div>
+      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="1"</div></div>
 
-      <div data-gnl="1 4p"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="1 4p"</div></div>
-      <div data-gnl="1 2p"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="1 2p" (veya data-gnl="2 4p" yazabilirdiniz)</div></div>
-      <div data-gnl="1 4p"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="1 4p"</div></div>
-      <div data-gnl="6 6p"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="6 6p"</div></div>
-      <div data-gnl="2 6p"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="2 6p"</div></div>
-      <div data-gnl="2 6p">
-        <div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="2 6p"</div>
-        <div data-gnl="3"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="2 6p" > data-gnl="3"</div></div>
-        <div data-gnl="3"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="2 6p" > data-gnl="3"</div></div>
+      <div data-deveb~="1 4p"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="1 4p"</div></div>
+      <div data-deveb~="1 2p"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="1 2p" (veya data-deveb~="2 4p" yazabilirdiniz)</div></div>
+      <div data-deveb~="1 4p"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="1 4p"</div></div>
+      <div data-deveb~="6 6p"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="6 6p"</div></div>
+      <div data-deveb~="2 6p"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="2 6p"</div></div>
+      <div data-deveb~="2 6p">
+        <div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="2 6p"</div>
+        <div data-deveb~="3"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="2 6p" > data-deveb~="3"</div></div>
+        <div data-deveb~="3"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="2 6p" > data-deveb~="3"</div></div>
       </div>
-      <div data-gnl="2 6p">
-        <div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="2 6p"</div>
-        <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="2 6p" > data-gnl="2"</div></div>
-        <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="2 6p" > data-gnl="2"</div></div>
-        <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="3 3p" > data-gnl="2 6p" > data-gnl="2"</div></div>
+      <div data-deveb~="2 6p">
+        <div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="2 6p"</div>
+        <div data-deveb~="2"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="2 6p" > data-deveb~="2"</div></div>
+        <div data-deveb~="2"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="2 6p" > data-deveb~="2"</div></div>
+        <div data-deveb~="2"><div class="kutu kutu-genel">data-deveb~="3 3p" > data-deveb~="2 6p" > data-deveb~="2"</div></div>
       </div>
     </div>
   </div>
 </div>
 
-<div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+<div data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <script>w3.includeHTML();</script>
 </body>
