--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -23,10 +23,10 @@
   <![endif]-->
 </head>
 <body class="kap ortala">
-  <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-  <div data-gnl="23 24p">
-    <div data-deveb="kaplama" data-gnl="24" data-ufk="24 24p">
-      <div data-gnl="24">
+  <div class="header" data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+  <div data-deveb~="23 24p">
+    <div data-deveb="kaplama" data-deveb~="24" data-deveb~="ufk-24 24p">
+      <div data-deveb~="24">
         <h1>Deveb Kurulumu</h1>
         <p>Deveb kullanımı için yapmanız gereken sadece CSS dosyasını dahil etmenizdir.<br><br></p>
           <pre style='color:#000000;background:#ffffff;'><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>link</span><span style='color:#274796; '> </span><span style='color:#074726; '>href</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"/css/deveb.css"</span><span style='color:#274796; '> </span><span style='color:#074726; '>rel</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"stylesheet"</span><span style='color:#a65700; '>></span></pre>
@@ -35,7 +35,7 @@
       </div>
     </div>
   </div>
-  <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+  <div data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
   <script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
   <script>w3.includeHTML();</script>
 </body>
