--- a/toprak/foot.html
+++ b/toprak/foot.html
@@ -5,8 +5,8 @@
   </ul>
 </div>
 
-<div data-deveb="ortada" data-gnl="24 24p">
-  <div id="disqus_thread" data-gnl="23"></div>
+<div data-deveb="ortada" data-deveb~="24 24p">
+  <div id="disqus_thread" data-deveb~="23"></div>
   <script>
 
   /**
